all the files are well organized

--- a/chunk codes/spilt_json.ipynb
+++ b/chunk codes/spilt_json.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1_spilt_json.ipynb\n",
+    "## spilt_json.ipynb\n",
     "\n",
     "This notebook provides a script to split a large JSON file into smaller chunks. The main tasks include:\n",
     "1. Reading a JSON file containing key-value pairs.\n",
